# -

./: .flake8  .gitignore  README.md  main.py  pyproject.toml
data/: operations.json
src/: API.py  csv_xlsx_read.py  decorators.py  external_api.py  generators.py  logger.py  masks.py  mylog.txt  processing.py  services.py  utils.py  widget.py
tests/: mylog.txt  test_csv_xlsx_read.py  test_decorators.py  test_generators.py  test_masks.py  test_processing.py  test_utils.py  test_widget.py  tests.py
