[tool.poetry]
name = "pythonproject13"
version = "0.1.0"
description = ""
authors = ["Damirka1488 <andreevdamir266@gmail.com"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.31.0"

[tool.poetry.group.lint.dependencies]
isort = "^5.13.2"
mypy = "^1.9.0"
flake8 = "^7.0.0"
black = "^24.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
# максимальная длина строки
line_length = 119

[tool.mypy]
disallow_untyped_defs = true
no_implicit_optional = true
warn_return_any = true
exclude = 'venv'

[tool.black]
# Максимальная длина строки
line-length = 119
# Файлы, которые не нужно форматировать
exclude = '''
(

